feat: update dependencies and enhance UI/UX
- Added `crypto-js` and `dotenv` packages for improved security and environment variable management.
- Refactored CSS styles for a more modern and cohesive design, including new color variables and layout adjustments.
- Improved the App component with better state management and error handling.
- Introduced a modal for displaying QR codes and wallet addresses.
- Enhanced transaction history display with improved formatting and user feedback.
- Updated wallet creation and access logic to streamline user experience.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.0",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.6",
     "mongoose": "^8.16.4",
